--- a/extensions/swagger/static/index.html
+++ b/extensions/swagger/static/index.html
@@ -25,7 +25,7 @@
   <script type="text/javascript">
     $(function () {
       window.swaggerUi = new SwaggerUi({
-      url: location.href + "api-docs",
+      url: location.protocol + '//' + location.host + location.pathname + "api-docs",
       dom_id: "swagger-ui-container",
       supportedSubmitMethods: ['get', 'post', 'put', 'delete'],
       onComplete: function(swaggerApi, swaggerUi){
